--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.0",
+    "expo-image": "~3.0.11",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
