--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "",
+    "name": "SARISANSKRUTI",
     "slug": "sarisanskruti-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
