--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -17,8 +17,11 @@
     "axios": "^1.7.9",
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.0",
+    "expo-file-system": "~19.0.21",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "~15.0.8",
+    "expo-print": "~15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
@@ -26,7 +29,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.7.1",
     "react-native-worklets-core": "^1.6.2"
   },
